--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, {
 
 
 .step {
-   border: 1px solid #CCF;
+   /* border: 1px solid #CCF; */
    /* width: 1200px; */
    /* text-align: center; */
 }
